# spicy-cuda-nbody

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  data.cpp  data.h  generation.h  generator.cpp  generator.h  geometry.cpp  geometry.h  graph.py  gravity_calculations.h  helper_cuda.h  main.cpp  main.cu  octree.h  output.txt  tree.cpp  tree.h
testCudaQuadtree/CUDA451/: cdpOctree.cu  cdpQuadtree.cu  helper_string.h
